Correcciones a los textos

--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister.properties
@@ -1,55 +1,132 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
+#Registro
+
 lblEmail=Correo electronico
-promptMsgEmail=Teclee el correo electronico
+promptMsgEmail=Ingresa tu correo electronico
 lblEmailFault=Correo electronico invalido
-lblEmailDupl=no puso el correo electronico
-msgErrInvalidEmail=msgErrInvalidEmail
+lblEmailDupl=Correo electronico duplicado
+msgErrInvalidEmail=El correo electronico es requerido
 
 lblPassword=Contrase\u00f1a
-promptMsgPassword=promptMsgPassword
-lblPasswordFault=lblPasswordFault
-msgErrPasswordRequired=msgErrPasswordRequired
+promptMsgPassword=Ingresa tu contrase\u00f1a
+lblPasswordFault=Contrase\u00f1a invalida
+msgErrPasswordRequired=La contrase\u00f1a es requerida
 
 lblPasswordConfirm=Confirmar contrase\u00f1a
-promptMsgPasswordConfirm=promptMsgPasswordConfirm
-lblPasswordConfirmFault=lblPasswordConfirmFault
+promptMsgPasswordConfirm=Confirma tu contrase\u00f1a
+lblPasswordConfirmFault=Contrase\u00f1a diferente
 
 lblFirstName=Nombre
-promptMsgFirstName=promptMsgFirstName
-lblFirstNameFault=lblFirstNameFault
-msgErrFirstNameRequired=msgErrFirstNameRequired
+promptMsgFirstName=Ingresa tu nombre
+lblFirstNameFault=Nombre invalido
+msgErrFirstNameRequired=El nombre es requerido
 
 lblLastName=Primer apellido
-promptMsgLastName=promptMsgLastName
-lblLastNameFault=lblLastNameFault
-msgErrLastNameRequired=msgErrLastNameRequired
+promptMsgLastName=Ingresa tu primer apellido
+lblLastNameFault=Apellido invalido
+msgErrLastNameRequired=El apellido es requerido
 
 lblSecondLastName=Segundo apellido
-promptMsgSecondLastName=promptMsgSecondLastName
-lblSecondLastNameFault=lblSecondLastNameFault
+promptMsgSecondLastName=Ingresa tu segundo apellido
+lblSecondLastNameFault=Segundo apellido invalido
 
-lblPhone=Telefono
-promptMsgPhone=promptMsgPhone
-lblPhoneFault=lblPhoneFault
+lblBirthday=Fecha de nacimiento
+promptMsgBirthday=Ingresa tu fecha de nacimiento (dd/mm/aaaa)
+lblBirthdayFault=Fecha de nacimiento invalida
+msgErrLastNameRequired=Fecha de nacimiento requerida
 
-lblCaptcha=lblCaptcha
-lblTryRead=lblTryRead
-lblTryAnotherText=lblTryAnotherText
-msgErrSecureCodeRequired=msgErrSecureCodeRequired
+lblCaptcha=Ingresa el texto de la imagen
+lblTryRead=\u00bfNo lo puedes ver?
+lblTryAnotherText=intenta otro texto
+msgErrSecureCodeRequired=El codigo es requerido
 
-lblReset=lblReset
-lblSubmit=lblSubmit
+lblReset=Borrar
+lblSubmit=Enviar
+lblSave=Guardar
 
 msgErrUserAlreadySigned=msgErrUserAlreadySigned
-msgErrUserAlreadyExists=msgErrUserAlreadyExists
+msgErrUserAlreadyExists=El usuario ya habia sido dado de alta
 
-msgSubject=msgSubject
-
+#adm registro
 usrmsg_Admin_msgRecursoActualizado=Se actualiz\u00f3 exitosamente el recurso con identificador
 usrmsg_Admin_Data=Datos
 usrmsg_Admin_RollGroup=Role/UserGroup para edici\u00f3n
 usrmsg_Admin_ListMessage=Ninguno
 usrmsg_Admin_btnGuardar=Guardar
 usrmsg_Admin_btnReset=Restablecer
+
+#Correo
+msgSubject=Correo de confirmaci\u00f3n
+
+#Dados personales
+lblCurp=CURP
+promptMsgCurp=Ingresa tu CURP
+lblCurpFault=CURP Invalido
+
+lblGender=G\u00e9nero
+lblGenderFem=Femenino
+lblGenderMas=Masculino
+promptMsgGender=Ingresa tu g\u00e9nero
+lblGenderFault=G\u00e9nero invalido
+
+lblState=Entidad de nacimiento
+promptMsgState=Selecciona tu entidad de nacimiento
+lblGenderFault=Entidad Invalida
+
+lblNationality=Nacionalidad
+promptMsgNationality=Ingresa tu nacionalidad
+lblNationalityFault=Nacionalidad invalida
+
+lblFm2=FM2 Vigente
+promptMsgFm2=Ingresa tu FM2 vigente
+lblFm2Fault=FM2 invalida
+
+lblPhoneNum=Telefono
+lblPhoneLada=Lada
+lblPhoneExt=Extension
+lblPhoneType=Tipo
+promptMsgPhone=Ingresa tu n\u00famero telefonico
+promptMsgPhoneType=Seleccionaa el tipo de telefono
+lblPhoneFault=Telefono invalido
+
+lblSLabor=Situacion laboral actual
+promptMsgSLabor=Selecciona tu situacion laboral actual
+lblFaultSLabor=lblFaultSLabor
+
+lblAvailability=Disponibilidad en dias habiles
+lblAvailabilityMo=Lunes
+lblAvailabilityTu=Martes
+lblAvailabilityWe=Miercoles
+lblAvailabilityTh=Jueves
+lblAvailabilityFr=Viernes
+lblAvailabilitySa=Sabado
+lblAvailabilitySu=Domingo
+promptMsgAvailability=Selecciona los dias de disponibilidad
+lblAvailabilityFault=lblAvailabilityFault
+
+lblFacebook=Facebook
+promptMsgFacebook=Ingresa cuenta de Facebook
+lblFacebookFault=Cuenta de Facebook invalida
+
+lblSkype=Skype
+promptMsgSkype=Ingresa cuenta de Skype
+lblSkypeFault=Cuenta de Skype invalida
+
+lblMsn=MSN
+promptMsgMsn=Ingresa cuenta de MSN
+lblMsnFault=Cuenta de MSN invalida
+
+lblLinkedin=Linkedin
+promptMsgLinkedin=Ingresa cuenta de Linkedin
+lblLinkedinFault=Cuenta de Linkedin invalida
+
+lblTwitter=Twitter
+promptMsgTwitter=Ingresa cuenta de Twitter
+lblTwitterFault=Cuenta de Twitter invalida
+#Conocimiento Formal
+#Experiencia Profesional
+#Competencias
+#Investigacion y docencia
+#Documentos provatorios
