--- a/swbproys/ework/nbproject/project.properties
+++ b/swbproys/ework/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.json.jar=../../SWB4/swb/lib/json.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -43,7 +44,8 @@ javac.classpath=\
     ${reference.SWBBase.jar}:\
     ${reference.SWBPlatform.jar}:\
     ${reference.SWBPortal.jar}:\
-    ${reference.Eworkplace.jar}
+    ${reference.Eworkplace.jar}:\
+    ${file.reference.json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
