--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/favoriteWebPages/SWBFavoriteWebPagesResource.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/sem/favoriteWebPages/SWBFavoriteWebPagesResource.properties
@@ -2,3 +2,6 @@ msgOkBookmarkResource=Esta p\u00e1gina fue marcada como favorita
 msgAlreadyBookmarkResource=Esta p\u00e1gina ya estaba marcada como favorita
 msgErrBookmarkResource=No fue posible marcar esta p\u00e1gina
 msgOkUncheckResource=Esta p\u00e1gina fue desmarcada
+
+lblBookmarkThisPage=Agregar como favorita
+lblDeleteBookmark=Quitar de favoritos
