ajustes por cambio a  la ontologia, multiples correos

--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister.properties
@@ -104,7 +104,7 @@ lblSLabor=Situacion laboral actual
 promptMsgSLabor=Selecciona tu situacion laboral actual
 lblFaultSLabor=lblFaultSLabor
 
-lblAvailability=Disponibilidad en dias habiles
+lblAvailability=Dias habiles para estar en disponibilidad
 lblAvailabilityMo=Lunes
 lblAvailabilityTu=Martes
 lblAvailabilityWe=Miercoles
@@ -112,7 +112,7 @@ lblAvailabilityTh=Jueves
 lblAvailabilityFr=Viernes
 lblAvailabilitySa=Sabado
 lblAvailabilitySu=Domingo
-promptMsgAvailability=Selecciona los dias de disponibilidad
+promptMsgAvailability=Selecciona en cuantos dias puedes estar en disponibilidad
 lblAvailabilityFault=lblAvailabilityFault
 
 lblFacebook=Facebook
