Cambios por direccion  y cp en ajax

--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister.properties
@@ -92,6 +92,42 @@ lblFm2=FM2 Vigente
 promptMsgFm2=Ingresa tu FM2 vigente
 lblFm2Fault=FM2 invalida
 
+lblAddres=Direcci\u00f3n
+promptMsgAddres=Ingresa tu direcci\u00f3n
+lblAddresFault=Direcci\u00f3n invalida
+
+lblAddrStreet=Calle
+promptMsgAddrStreet=Ingresa tu calle
+lblAddrStreetFault=Calle invalida
+
+lblAddrNumE=N\u00famero exterior
+promptMsgAddrNumE=Ingresa tu n\u00famero exterior
+lblAddrNumEFault=N\u00famero exterior invalido
+
+lblAddrNumI=N\u00famero interior
+promptMsgAddrNumI=Ingresa tu n\u00famero interior
+lblAddrNumIFault=n\u00famero interior invalido
+
+lblAddrZip=C\u00f3digo Postal
+promptMsgAddrZip=Ingresa tu codigo postal
+lblAddrZipFault=Codigo Postal invalido
+
+lblAddrCol=Colonia
+promptMsgAddrCol=Selecciona tu colonia
+lblAddrColFault=Colonia invalida
+
+lblAddrMun=Municipio / Delegaci\u00f3n
+promptMsgAddrMun=Ingresa tu minicipio o delegaci\u00f3n
+lblAddrMunFault=Municipio o delegaci\u00f3n invalido
+
+lblAddrState=Estado
+promptMsgAddrState=Ingresa tu estado
+lblAddrStateFault=Estado invalido
+
+lblAddrCountry=Pais
+promptMsgAddrCountry=Selecciona tu pais
+lblAddrCountryFault=Pais invalido
+
 lblPhoneNum=Telefono
 lblPhoneLada=Lada
 lblPhoneExt=Extension
