--- a/SWB4/swb/SWBBigDataInt/nbproject/project.properties
+++ b/SWB4/swb/SWBBigDataInt/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=SWBBigDataInt
@@ -123,7 +124,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=-Xss256k -Xms512m -Xmx2048m
+run.jvmargs=-Xms512m -Xmx5500m
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
