--- a/SWB4/swb/src/java/web.properties
+++ b/SWB4/swb/src/java/web.properties
@@ -140,13 +140,14 @@ swb/accessLogTime=300
 #***********************************************************
 #*** Definici\u00f3n del tipo de persistencia de los triples de RDF
 #*** Opciones:
-#***           - default    (Base de datos)
-#***           - sdb        (Base de datos, optimizada SparQl)
-#***           - tdb        (File System, no transaccional)
-#***           - swbts      (Base de datos, optimizada para SWB)
-#***           - swbrts     (base de datos remota, s\u00f3lo en clientes, se usa en conjunci\u00f3n con swbts en el Admin)
-#***           - bigdata    (BigData, requiere incorporar bibliotecas de BigData y Sesame)
-#***           - swbtsmongo (Base de datos MongoDB)
+#***           - default      (Base de datos)
+#***           - sdb          (Base de datos, optimizada SparQl)
+#***           - tdb          (File System, no transaccional)
+#***           - swbts        (Base de datos, optimizada para SWB)
+#***           - swbrts       (Base de datos remota, s\u00f3lo en clientes, se usa en conjunci\u00f3n con swbts en el Admin)
+#***           - bigdata      (BigData, requiere incorporar bibliotecas de BigData y Sesame)
+#***           - swbtsmongo   (Base de datos MongoDB)
+#***           - swbtsgemfire (Base de datos GemFire)
 #***********************************************************
 swb/triplepersist=swbts
 
@@ -157,8 +158,14 @@ swb/tripleremoteserver=localhost
 #swb/tripleremoteport=6666
 #swb/tripleremoteport=27017
 
-#Nombre de la base de datos a usar con ts mongo
+#Nombre de la base de datos a usar con mongo y gemfire
 #swb/mongodbname=swb
+#swb/gemfiredbname=swb
+
+#GemFire Properties
+#swb/gemfire_locators=gem1.xxxx.com[14444]
+#swb/gemfire_license-data-management=Y141D-H0101-08L8R-05AAH-AFAPC,R548W-M0L5J-48V8T-03F9P-A626C-XXXXX
+#swb/gemfire_license-application-cache=Y140D-M0J9J-08V8H-0628M-3FK4G-XXXXX
 
 
 #triple store statements cache (solo se usa una conecci\u00f3n a DB)
