--- a/SWB4/swb/nbproject/project.properties
+++ b/SWB4/swb/nbproject/project.properties
@@ -241,8 +241,7 @@ javac.classpath=\
     ${reference.SWBBigDataInt.jar}:\
     ${reference.SWBTripleStoreMongo.jar}:\
     ${file.reference.mongo-2.7.0.jar}:\
-    ${file.reference.commons-pool-1.5.6.jar}:\
-    ${reference.SWBWebdav.jar}
+    ${file.reference.commons-pool-1.5.6.jar}
     ${file.reference.facebook-java-api-3.0.0-SNAPSHOT.jar}:\
     ${file.reference.facebook-java-api-schema-3.0.0-SNAPSHOT.jar}
 # Space-separated list of extra javac options
@@ -298,7 +297,6 @@ project.SWBSIP=SWBSIP
 project.SWBTOWB3Compatibility=WB3Compatibility
 project.SWBTripleStore=SWBTripleStore
 project.SWBTripleStoreMongo=SWBTripleStoreMongo
-project.SWBWebdav=SWBWebdav
 project.SWBXMLRPCCommon=../Client/XMLRPCCommon
 project.SWBXMRPCServer=../Client/XMRPCServer
 reference.SWB3Resources.jar=${project.SWB3Resources}/dist/SWB3Resources.jar
@@ -322,7 +320,6 @@ reference.SWBSIP.jar=${project.SWBSIP}/dist/SWBSIP.jar
 reference.SWBTOWB3Compatibility.jar=${project.SWBTOWB3Compatibility}/dist/SWBTOWB3Compatibility.jar
 reference.SWBTripleStore.jar=${project.SWBTripleStore}/dist/SWBTripleStore.jar
 reference.SWBTripleStoreMongo.jar=${project.SWBTripleStoreMongo}/dist/SWBTripleStoreMongo.jar
-reference.SWBWebdav.jar=${project.SWBWebdav}/dist/SWBWebdav.jar
 reference.SWBXMLRPCCommon.jar=${project.SWBXMLRPCCommon}/dist/SWBXMLRPCCommon.jar
 reference.SWBXMRPCServer.jar=${project.SWBXMRPCServer}/dist/SWBXMRPCServer.jar
 resource.dir=setup
