Correcciones en la asignacion de rol y los criterios para considerar completos los datos

--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister.properties
@@ -57,7 +57,8 @@ msgErrUserAlreadyExists=El usuario ya habia sido dado de alta
 #adm registro
 msgRecursoActualizado=Se actualiz\u00f3 exitosamente el recurso con identificador
 lblData=Datos
-lblRollGroup=Role/UserGroup para edici\u00f3n
+lblCompleteRoleGroup=Role/UserGroup al completar forma
+lblEditRoleGroup=Role/UserGroup al editar
 lblListMessage=Ninguno
 lblGuardar=Guardar
 lblReset=Restablecer
