--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserPersonalData.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserPersonalData.properties
@@ -1,7 +1,8 @@
 #adm registro datos personas
 msgRecursoActualizado=Se actualiz\u00f3 exitosamente el recurso con identificador
 lblData=Datos
-lblRollGroup=Role/UserGroup para edici\u00f3n
+lblCompleteRoleGroup=Role/UserGroup al completar forma
+lblEditRoleGroup=Role/UserGroup al editar
 lblListMessage=Ninguno
 lblGuardar=Guardar
 lblReset=Restablecer
