--- a/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/SWProfileManager.properties
+++ b/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/SWProfileManager.properties
@@ -1,3 +1,21 @@
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
-
+lblPhoneNum=Tel\u00e9fono
+lblPhoneLada=Lada
+lblPhoneExt=Extensi\u00f3n
+promptMsgPhoneLada=Ingresa tu clave lada
+promptMsgFaultPhoneLada=Clave Lada incorrecta
+promptMsgPhone=Ingresa tu n\u00famero telef\u00f3nico
+promptMsgFaultPhone=N\u00famero telef\u00f3nico incorrecto
+promptMsgPhoneExt=Ingresa tu extensi\u00f3n telef\u00f3nica
+promptMsgFaultExt=Extensi\u00f3n telef\u00f3nica incorrecta
+promptMsgPhoneExtDr=Ingresa la extensi\u00f3n telef\u00f3nica de tu direcci\u00f3n
+lblEmail=Correo electr\u00f3nico
+promptMsgEmail=Ingresa tu correo electr\u00f3nico
+promptMsgFaultEmail=Correo electr\u00f3nico incorrecto
+promptMsgPersonality=Ingresa informaci\u00f3n de tu personalidad
+promptMsgFaultPersonality=La informaci\u00f3n de tu personalidad es requerida
+promptMsgLikes=Ingresa informaci\u00f3n de tus gustos
+promptMsgFaultLikes=La informaci\u00f3n de tus gustos es requerida
+promptMsgIdeas=Ingresa informaci\u00f3n de tus ideas
+promptMsgFaultIdeas=La informaci\u00f3n de tus ideas es requerida
+promptMsgLocation=Ingresa informaci\u00f3n de tu ubicaci\u00f3n
+promptMsgFaultLocation=La informaci\u00f3n de tu ubicaci\u00f3n es requerida
