--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister.properties
@@ -12,7 +12,8 @@ msgErrInvalidEmail=El correo electronico es requerido
 lblLogin=Usuario
 promptMsgLogin=Ingresa tu nombre de usuario
 lblLoginFault=Nombre de usuario invalido
-msgErrLoginRequired=El nombreLa contrase\u00f1a es requerida
+lblLoginDupl=Nombre de usuario duplicado
+msgErrLoginRequired=La contrase\u00f1a es requerida
 
 lblPassword=Contrase\u00f1a
 promptMsgPassword=Ingresa tu contrase\u00f1a
@@ -46,6 +47,8 @@ lblCaptcha=Ingresa el texto de la imagen
 lblTryRead=\u00bfNo lo puedes ver?
 lblTryAnotherText=intenta otro texto
 msgErrSecureCodeRequired=El codigo es requerido
+promptMsgCaptcha=Ingresa el texto de la imagen
+lblCaptchaFault=El codigo es incorrecto
 
 lblReset=Borrar
 lblSubmit=Enviar
@@ -65,6 +68,7 @@ lblReset=Restablecer
 lblInsToActivate=Instrucciones del correo
 lblGratefulness=Agradecimiento
 lblCongratulations=Felicitaci\u00f3n
+lblSeccion=Seccion donde continuara
 msgNoMsg=Sin mensaje {link}
 
 #Correo
