--- a/swbproys/Eworkplace/nbproject/project.properties
+++ b/swbproys/Eworkplace/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-fileupload-1.2.1.jar=lib\\commons-fileupload-1.2.1.jar
-file.reference.iText-2.1.5.jar=../../SWB4/swb/lib/iText-2.1.5.jar
+file.reference.itextpdf-5.2.0.jar=lib\\itextpdf-5.2.0.jar
 file.reference.jena-2.6.3.jar=lib\\jena-2.6.3.jar
 file.reference.json.jar=../../SWB4/swb/lib/json.jar
 file.reference.servlet.jar=lib\\servlet.jar
@@ -43,7 +43,7 @@ javac.classpath=\
     ${reference.SWBCommunity.jar}:\
     ${file.reference.commons-fileupload-1.2.1.jar}:\
     ${file.reference.json.jar}:\
-    ${file.reference.iText-2.1.5.jar}
+    ${file.reference.itextpdf-5.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
