Correccion en manejo de terminos y envio de correos

--- a/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister.properties
+++ b/swbproys/Eworkplace/src/com/infotec/cvi/swb/resources/UserRegister.properties
@@ -62,6 +62,7 @@ msgRecursoActualizado=Se actualiz\u00f3 exitosamente el recurso con identificado
 lblData=Datos
 lblCompleteRoleGroup=Role/UserGroup al completar forma
 lblEditRoleGroup=Role/UserGroup al editar
+lblRoleGroup=Role/UserGroup a agregar
 lblListMessage=Ninguno
 lblGuardar=Guardar
 lblReset=Restablecer
@@ -70,6 +71,11 @@ lblGratefulness=Agradecimiento
 lblCongratulations=Felicitaci\u00f3n
 lblSeccion=Seccion donde continuara
 msgNoMsg=Sin mensaje {link}
+
+lblEmailBcc=Correo BCC de aceptacion
+lblEmailAgreeMsg=Correo de aceptacion
+lblSubject=Aceptacion de aviso de privacidad INFOTEC-CVI
+lblAgreement=Aviso de privacidad
 
 #Correo
 msgSubject=Correo de confirmaci\u00f3n
