--- a/swbproys/ssmcc/SOCIALMODEL/nbproject/project.properties
+++ b/swbproys/ssmcc/SOCIALMODEL/nbproject/project.properties
@@ -27,13 +27,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.SOCIALMODEL-src=src
 file.reference.SOCIALMODEL-test=test
+file.reference.twitter4j-core-2.2.5.jar=C:\\webbuilder\\SWB4\\swb\\lib\\twitter4j-core-2.2.5.jar
+file.reference.twitter4j-stream-2.2.5.jar=C:\\webbuilder\\SWB4\\swb\\lib\\twitter4j-stream-2.2.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.SWBBase.jar}:\
     ${reference.SWBModel.jar}:\
     ${reference.SWBPlatform.jar}:\
-    ${reference.SWBPortal.jar}
+    ${reference.SWBPortal.jar}:\
+    ${file.reference.twitter4j-core-2.2.5.jar}:\
+    ${file.reference.twitter4j-stream-2.2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
