--- a/SWB4/swb/src/java/web.properties
+++ b/SWB4/swb/src/java/web.properties
@@ -158,14 +158,21 @@ swb/tripleremoteserver=localhost
 #swb/tripleremoteport=6666
 #swb/tripleremoteport=27017
 
-#Nombre de la base de datos a usar con mongo y gemfire
-#swb/mongodbname=swb
-#swb/gemfiredbname=swb
-
 #GemFire Properties
+#Nombre de la base de datos a usar
+#swb/gemfiredbname=swb
+#swb/gemfire_mcast-port=0
 #swb/gemfire_locators=gem1.xxxx.com[14444]
 #swb/gemfire_license-data-management=Y141D-H0101-08L8R-05AAH-AFAPC,R548W-M0L5J-48V8T-03F9P-A626C-XXXXX
 #swb/gemfire_license-application-cache=Y140D-M0J9J-08V8H-0628M-3FK4G-XXXXX
+
+
+#MongoDB Properties
+#Nombre de la base de datos a usar 
+#swb/mongodbname=swb
+#Configuraci\u00f3n de usuario y password en el caso de iniciar con seguridad
+#swb/mongodbuser=usuario
+#swb/mongodbpasswd=password
 
 
 #triple store statements cache (solo se usa una conecci\u00f3n a DB)
@@ -176,7 +183,7 @@ swb/tripleremoteserver=localhost
 swb/tripleFullCache=false
 
 #Se carga toda semanticobjects a memoria.
-swb/semanticObjectsFullCache=true
+swb/semanticObjectFullCache=false
 
 #old resource versions support
 swb/oldResourcesSupport=false
