--- a/SWB4/swb/SWBSocial/nbproject/project.properties
+++ b/SWB4/swb/SWBSocial/nbproject/project.properties
@@ -1,9 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SWBSocial
+application.vendor=jorge.jimenez
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,23 +24,28 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/SWBSocial.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-fileupload-1.2.1.jar=..\\lib\\commons-fileupload-1.2.1.jar
 file.reference.log4j-1.2.15.jar=..\\lib\\log4j-1.2.15.jar
-file.reference.twitter4j-core-2.2.5.jar=..\\lib\\twitter4j-core-2.2.5.jar
-file.reference.twitter4j-stream-2.2.5.jar=..\\lib\\twitter4j-stream-2.2.5.jar
+file.reference.servlet-api.jar=..\\lib\\servlet-api.jar
+file.reference.twitter4j-2.0.9.jar=../lib/twitter4j-2.0.9.jar
+file.reference.twitter4j-core-2.2.5.jar=../lib/twitter4j-core-2.2.5.jar
+file.reference.twitter4j-stream-2.2.5.jar=../lib/twitter4j-stream-2.2.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.twitter4j-core-2.2.5.jar}:\
-    ${reference.SWBSocialModel.jar}:\
     ${reference.SWBBase.jar}:\
     ${reference.SWBModel.jar}:\
     ${reference.SWBPlatform.jar}:\
     ${reference.SWBPortal.jar}:\
-    ${file.reference.twitter4j-stream-2.2.5.jar}:\
     ${file.reference.commons-fileupload-1.2.1.jar}:\
-    ${file.reference.log4j-1.2.15.jar}
+    ${file.reference.log4j-1.2.15.jar}:\
+    ${file.reference.twitter4j-2.0.9.jar}:\
+    ${file.reference.twitter4j-core-2.2.5.jar}:\
+    ${file.reference.twitter4j-stream-2.2.5.jar}:\
+    ${file.reference.servlet-api.jar}:\
+    ${reference.SWBSocialModel.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,7 +79,7 @@ project.SWBBase=../SWBBase
 project.SWBModel=../SWBModel
 project.SWBPlatform=../SWBPlatform
 project.SWBPortal=../SWBPortal
-project.SWBSocialModel=../../../swbproys/ssmcc/SOCIALMODEL
+project.SWBSocialModel=../SWBSocialModel
 reference.SWBBase.jar=${project.SWBBase}/dist/SWBBase.jar
 reference.SWBModel.jar=${project.SWBModel}/dist/SWBModel.jar
 reference.SWBPlatform.jar=${project.SWBPlatform}/dist/SWBPlatform.jar
