--- a/SWB4/swb/SWBLinkedDataSpider/nbproject/project.properties
+++ b/SWB4/swb/SWBLinkedDataSpider/nbproject/project.properties
@@ -26,9 +26,14 @@ dist.jar=${dist.dir}/SWBLinkedDataSpider.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.arthurdo.jar=..\\lib\\arthurdo.jar
+file.reference.commons-fileupload-1.2.1.jar=..\\lib\\commons-fileupload-1.2.1.jar
+file.reference.commons-logging-1.1.1.jar=..\\lib\\commons-logging-1.1.1.jar
+file.reference.fileupload-ext.jar=..\\lib\\fileupload-ext.jar
 file.reference.isorelax.jar=..\\lib\\isorelax.jar
 file.reference.jdom.jar=..\\lib\\jdom.jar
+file.reference.log4j-1.2.15.jar=..\\lib\\log4j-1.2.15.jar
 file.reference.msv.jar=..\\lib\\msv.jar
+file.reference.slf4j-log4j12-1.5.8.jar=..\\lib\\slf4j-log4j12-1.5.8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -36,7 +41,10 @@ javac.classpath=\
     ${reference.SWBBase.jar}:\
     ${file.reference.isorelax.jar}:\
     ${file.reference.msv.jar}:\
-    ${file.reference.arthurdo.jar}
+    ${file.reference.arthurdo.jar}:\
+    ${file.reference.log4j-1.2.15.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.fileupload-ext.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -47,7 +55,12 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.log4j-1.2.15.jar}:\
+    ${file.reference.fileupload-ext.jar}:\
+    ${file.reference.slf4j-log4j12-1.5.8.jar}:\
+    ${file.reference.commons-fileupload-1.2.1.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
