--- a/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/sem/ReservaSalaManager.properties
+++ b/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/sem/ReservaSalaManager.properties
@@ -8,8 +8,12 @@ lblSave=Guardar
 lblReset=Restablecer
 lblNoRequired=No es requerido
 
-msgErrHourRequired=Seleccionar horario de reservaci\u00f3n
-msgErrHourMismatch=El horario no corresponde a la misma fecha
-msgErrRoomMismatch=La sala no corresponde
-msgErrNoRoom=La Sala no corresponde a ninguna sala v\u00e1lida
-msgErrBackTime=Los vulcanos dicen no poder viajar en el tiempo
+msgErrRoomMismatch=La sala no corresponde a ninguna sala v\u00e1lida
+msgErrHourMismatch=El horario de reservaci\u00f3n es incorrecto
+msgErrMoviteMissing=El motivo de la reservaci\u00f3n es requerido
+msgErrMeetTypeMissing=El tipo de reuni\u00f3n es requerido
+msgErrCafeteriaMissing=El tipo de cafeter\u00eda es requerido
+msgErrCafeServiceMissing=El horario de servicio de cafeter\u00eda es requerido
+msgErrTurnOutMissing=El n\u00famero de asistentes es requerido
+msgErrTurnOutMismatch=El n\u00famero de asistentes supera la capacidad de la sala seleccionada
+msgErrReservationMismatch=Los vulcanos dicen no poder viajar en el tiempo
