--- a/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/sem/ReservaSalaManager.properties
+++ b/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/sem/ReservaSalaManager.properties
@@ -16,4 +16,4 @@ msgErrCafeteriaMissing=El tipo de cafeter\u00eda es requerido
 msgErrCafeServiceMissing=El horario de servicio de cafeter\u00eda es requerido
 msgErrTurnOutMissing=El n\u00famero de asistentes es requerido
 msgErrTurnOutMismatch=El n\u00famero de asistentes supera la capacidad de la sala seleccionada
-msgErrReservationMismatch=Los vulcanos dicen no poder viajar en el tiempo
+msgErrReservationMismatch=No es posible realizar la reservaci\u00f3n porque se traslapa con otra
