--- a/SWB4/swb/SWBSocialModel/nbproject/project.properties
+++ b/SWB4/swb/SWBSocialModel/nbproject/project.properties
@@ -26,6 +26,12 @@ dist.jar=${dist.dir}/SWBSocialModel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gdata-core-1.0.jar=..\\lib\\gdata-core-1.0.jar
+file.reference.gdata-media-1.0.jar=..\\lib\\gdata-media-1.0.jar
+file.reference.gdata-youtube-2.0.jar=..\\lib\\gdata-youtube-2.0.jar
+file.reference.google-collect-1.0-rc1.jar=..\\lib\\google-collect-1.0-rc1.jar
+file.reference.mail-1.3.3.jar=..\\lib\\mail-1.3.3.jar
+file.reference.servlet-api.jar=..\\lib\\servlet-api.jar
 file.reference.SWBSocialModel-src=src
 file.reference.SWBSocialModel-test=test
 includes=**
@@ -34,7 +40,13 @@ javac.classpath=\
     ${reference.SWBBase.jar}:\
     ${reference.SWBModel.jar}:\
     ${reference.SWBPlatform.jar}:\
-    ${reference.SWBPortal.jar}
+    ${reference.SWBPortal.jar}:\
+    ${file.reference.servlet-api.jar}:\
+    ${file.reference.gdata-core-1.0.jar}:\
+    ${file.reference.gdata-media-1.0.jar}:\
+    ${file.reference.gdata-youtube-2.0.jar}:\
+    ${file.reference.google-collect-1.0-rc1.jar}:\
+    ${file.reference.mail-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
