--- a/SWB4/swb/SWBSocial/nbproject/project.properties
+++ b/SWB4/swb/SWBSocial/nbproject/project.properties
@@ -27,7 +27,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-fileupload-1.2.1.jar=..\\lib\\commons-fileupload-1.2.1.jar
+file.reference.gdata-blogger-2.0.jar=..\\lib\\gdata-blogger-2.0.jar
+file.reference.gdata-client-1.0.jar=..\\lib\\gdata-client-1.0.jar
+file.reference.gdata-core-1.0.jar=..\\lib\\gdata-core-1.0.jar
+file.reference.gdata-media-1.0.jar=..\\lib\\gdata-media-1.0.jar
+file.reference.gdata-youtube-2.0.jar=..\\lib\\gdata-youtube-2.0.jar
+file.reference.google-collect-1.0-rc1.jar=..\\lib\\google-collect-1.0-rc1.jar
 file.reference.log4j-1.2.15.jar=..\\lib\\log4j-1.2.15.jar
+file.reference.mail-1.3.3.jar=..\\lib\\mail-1.3.3.jar
 file.reference.servlet-api.jar=..\\lib\\servlet-api.jar
 file.reference.twitter4j-2.0.9.jar=../lib/twitter4j-2.0.9.jar
 file.reference.twitter4j-core-2.2.5.jar=../lib/twitter4j-core-2.2.5.jar
@@ -45,6 +52,14 @@ javac.classpath=\
     ${file.reference.twitter4j-core-2.2.5.jar}:\
     ${file.reference.twitter4j-stream-2.2.5.jar}:\
     ${file.reference.servlet-api.jar}:\
+    ${file.reference.gdata-blogger-2.0.jar}:\
+    ${file.reference.gdata-client-1.0.jar}:\
+    ${file.reference.gdata-core-1.0.jar}:\
+    ${file.reference.gdata-media-1.0.jar}:\
+    ${file.reference.gdata-youtube-2.0.jar}:\
+    ${file.reference.google-collect-1.0-rc1.jar}:\
+    ${file.reference.mail-1.3.3.jar}:\
+    ${reference.YouTubeImp.jar}:\
     ${reference.SWBSocialModel.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -80,11 +95,13 @@ project.SWBModel=../SWBModel
 project.SWBPlatform=../SWBPlatform
 project.SWBPortal=../SWBPortal
 project.SWBSocialModel=../SWBSocialModel
+project.YouTubeImp=../YouTube
 reference.SWBBase.jar=${project.SWBBase}/dist/SWBBase.jar
 reference.SWBModel.jar=${project.SWBModel}/dist/SWBModel.jar
 reference.SWBPlatform.jar=${project.SWBPlatform}/dist/SWBPlatform.jar
 reference.SWBPortal.jar=${project.SWBPortal}/dist/SWBPortal.jar
 reference.SWBSocialModel.jar=${project.SWBSocialModel}/dist/SWBSocialModel.jar
+reference.YouTubeImp.jar=${project.YouTubeImp}/dist/YouTubeImp.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
