--- a/swbproys/Eworkplace/nbproject/project.properties
+++ b/swbproys/Eworkplace/nbproject/project.properties
@@ -45,7 +45,8 @@ javac.classpath=\
     ${file.reference.commons-fileupload-1.2.1.jar}:\
     ${file.reference.json.jar}:\
     ${file.reference.itextpdf-5.2.0.jar}:\
-    ${file.reference.mail-1.3.3.jar}
+    ${file.reference.mail-1.3.3.jar}:\
+    ${reference.SWBProcess.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,11 +79,13 @@ project.SWBCommunity=../../SWB4/swb/SWBCommunity
 project.SWBModel=../../SWB4/swb/SWBModel
 project.SWBPlatform=../../SWB4/swb/SWBPlatform
 project.SWBPortal=../../SWB4/swb/SWBPortal
+project.SWBProcess=../../SWB4/swb/SWBProcess
 reference.SWBBase.jar=${project.SWBBase}/dist/SWBBase.jar
 reference.SWBCommunity.jar=${project.SWBCommunity}/dist/SWBCommunity.jar
 reference.SWBModel.jar=${project.SWBModel}/dist/SWBModel.jar
 reference.SWBPlatform.jar=${project.SWBPlatform}/dist/SWBPlatform.jar
 reference.SWBPortal.jar=${project.SWBPortal}/dist/SWBPortal.jar
+reference.SWBProcess.jar=${project.SWBProcess}/dist/SWBProcess.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
