--- a/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/sem/ReservaSalaManager.properties
+++ b/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/sem/ReservaSalaManager.properties
@@ -17,3 +17,4 @@ msgErrCafeServiceMissing=El horario de servicio de cafeter\u00eda es requerido
 msgErrTurnOutMissing=El n\u00famero de asistentes es requerido
 msgErrTurnOutMismatch=El n\u00famero de asistentes supera la capacidad de la sala seleccionada
 msgErrReservationMismatch=No es posible realizar la reservaci\u00f3n porque se traslapa con otra
+msgReservationDoneOk=La reservaci\u00f3n se ha realizado exitosamente
