--- a/SWB4/swbsocial/SWBSocialModel/nbproject/project.properties
+++ b/SWB4/swbsocial/SWBSocialModel/nbproject/project.properties
@@ -1,9 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SWBSocialModel
+application.vendor=jorge.jimenez
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,10 +24,27 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/SWBSocialModel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.gdata-client-1.0.jar=..\\..\\swb\\lib\\gdata-client-1.0.jar
+file.reference.gdata-core-1.0.jar=..\\..\\swb\\lib\\gdata-core-1.0.jar
+file.reference.gdata-media-1.0.jar=..\\..\\swb\\lib\\gdata-media-1.0.jar
+file.reference.gdata-youtube-2.0.jar=..\\..\\swb\\lib\\gdata-youtube-2.0.jar
+file.reference.google-collect-1.0-rc1.jar=..\\..\\swb\\lib\\google-collect-1.0-rc1.jar
+file.reference.servlet-api.jar=..\\..\\swb\\lib\\servlet-api.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.SWBBase.jar}:\
+    ${reference.SWBModel.jar}:\
+    ${reference.SWBPlatform.jar}:\
+    ${reference.SWBPortal.jar}:\
+    ${file.reference.servlet-api.jar}:\
+    ${file.reference.gdata-client-1.0.jar}:\
+    ${file.reference.gdata-core-1.0.jar}:\
+    ${file.reference.gdata-media-1.0.jar}:\
+    ${file.reference.gdata-youtube-2.0.jar}:\
+    ${file.reference.google-collect-1.0-rc1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,6 +71,14 @@ javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
+project.SWBBase=../../swb/SWBBase
+project.SWBModel=../../swb/SWBModel
+project.SWBPlatform=../../swb/SWBPlatform
+project.SWBPortal=../../swb/SWBPortal
+reference.SWBBase.jar=${project.SWBBase}/dist/SWBBase.jar
+reference.SWBModel.jar=${project.SWBModel}/dist/SWBModel.jar
+reference.SWBPlatform.jar=${project.SWBPlatform}/dist/SWBPlatform.jar
+reference.SWBPortal.jar=${project.SWBPortal}/dist/SWBPortal.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
