--- a/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/sem/ReservaSalaManager.properties
+++ b/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/sem/ReservaSalaManager.properties
@@ -15,6 +15,7 @@ msgErrMeetTypeMissing=El tipo de reuni\u00f3n es requerido
 msgErrCafeteriaMissing=El tipo de cafeter\u00eda es requerido
 msgErrCafeServiceMissing=El horario de servicio de cafeter\u00eda es requerido
 msgErrTurnOutMissing=El n\u00famero de asistentes es requerido
-msgErrTurnOutMismatch=El n\u00famero de asistentes supera la capacidad de la sala seleccionada
-msgErrReservationMismatch=No es posible realizar la reservaci\u00f3n porque se traslapa con otra
-msgReservationDoneOk=La reservaci\u00f3n se ha realizado exitosamente
+msgErrTurnOutMismatch=El n\u00famero de asistentes supera la capacidad de la sala
+msgErrTurnOutMissingQuorum=No se cubre el n\u00famero m\u00ednimo de asistentes
+msgErrReservationMismatch=Sala NO disponible
+msgReservationDoneOk=La solicitud ha sido registrada
