--- a/SWB4/swbsocial/nbproject/project.properties
+++ b/SWB4/swbsocial/nbproject/project.properties
@@ -26,6 +26,12 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.gdata-client-1.0.jar=lib\\gdata-client-1.0.jar
+file.reference.gdata-core-1.0.jar=lib\\gdata-core-1.0.jar
+file.reference.gdata-media-1.0.jar=lib\\gdata-media-1.0.jar
+file.reference.gdata-youtube-2.0.jar=lib\\gdata-youtube-2.0.jar
+file.reference.google-collect-1.0-rc1.jar=lib\\google-collect-1.0-rc1.jar
+file.reference.servlet-api.jar=lib\\servlet-api.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -43,7 +49,13 @@ javac.classpath=\
     ${reference.SWBBase.jar}:\
     ${reference.SWBModel.jar}:\
     ${reference.SWBPlatform.jar}:\
-    ${reference.SWBPortal.jar}
+    ${reference.SWBPortal.jar}:\
+    ${file.reference.gdata-client-1.0.jar}:\
+    ${file.reference.gdata-core-1.0.jar}:\
+    ${file.reference.gdata-media-1.0.jar}:\
+    ${file.reference.gdata-youtube-2.0.jar}:\
+    ${file.reference.google-collect-1.0-rc1.jar}:\
+    ${file.reference.servlet-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
