--- a/SWB4/swbsocial/SWBSocialModel/nbproject/project.properties
+++ b/SWB4/swbsocial/SWBSocialModel/nbproject/project.properties
@@ -26,12 +26,12 @@ dist.jar=${dist.dir}/SWBSocialModel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gdata-client-1.0.jar=..\\..\\swb\\lib\\gdata-client-1.0.jar
-file.reference.gdata-core-1.0.jar=..\\..\\swb\\lib\\gdata-core-1.0.jar
-file.reference.gdata-media-1.0.jar=..\\..\\swb\\lib\\gdata-media-1.0.jar
-file.reference.gdata-youtube-2.0.jar=..\\..\\swb\\lib\\gdata-youtube-2.0.jar
-file.reference.google-collect-1.0-rc1.jar=..\\..\\swb\\lib\\google-collect-1.0-rc1.jar
-file.reference.servlet-api.jar=..\\..\\swb\\lib\\servlet-api.jar
+file.reference.gdata-client-1.0.jar=..\\lib\\gdata-client-1.0.jar
+file.reference.gdata-core-1.0.jar=..\\lib\\gdata-core-1.0.jar
+file.reference.gdata-media-1.0.jar=..\\lib\\gdata-media-1.0.jar
+file.reference.gdata-youtube-2.0.jar=..\\lib\\gdata-youtube-2.0.jar
+file.reference.google-collect-1.0-rc1.jar=..\\lib\\google-collect-1.0-rc1.jar
+file.reference.servlet-api.jar=..\\lib\\servlet-api.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -39,12 +39,12 @@ javac.classpath=\
     ${reference.SWBModel.jar}:\
     ${reference.SWBPlatform.jar}:\
     ${reference.SWBPortal.jar}:\
-    ${file.reference.servlet-api.jar}:\
     ${file.reference.gdata-client-1.0.jar}:\
     ${file.reference.gdata-core-1.0.jar}:\
     ${file.reference.gdata-media-1.0.jar}:\
     ${file.reference.gdata-youtube-2.0.jar}:\
-    ${file.reference.google-collect-1.0-rc1.jar}
+    ${file.reference.google-collect-1.0-rc1.jar}:\
+    ${file.reference.servlet-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
