--- a/SWB4/swbsocial/swbSocialResources/nbproject/project.properties
+++ b/SWB4/swbsocial/swbSocialResources/nbproject/project.properties
@@ -33,8 +33,8 @@ javac.classpath=\
     ${reference.SWBModel.jar}:\
     ${reference.SWBPlatform.jar}:\
     ${reference.SWBPortal.jar}:\
-    ${reference.SWBSocialModel.jar}:\
-    ${file.reference.servlet-api.jar}
+    ${file.reference.servlet-api.jar}:\
+    ${reference.SWBSocialModel.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
