Posteo de estados y fotos para twitter

--- a/SWB4/swbsocial/swbSocialResources/nbproject/project.properties
+++ b/SWB4/swbsocial/swbSocialResources/nbproject/project.properties
@@ -1,9 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=swbSocialResources
+application.vendor=adriana.rodriguez
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,11 +24,14 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/swbSocialResources.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.servlet-api.jar=..\\..\\swb\\lib\\servlet-api.jar
+file.reference.twitter4j-core-2.2.5.jar=../../swb/lib/twitter4j-core-2.2.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.twitter4j-core-2.2.5.jar}:\
     ${reference.SWBBase.jar}:\
     ${reference.SWBModel.jar}:\
     ${reference.SWBPlatform.jar}:\
@@ -61,6 +64,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 project.SWBBase=../../swb/SWBBase
 project.SWBModel=../../swb/SWBModel
