Posteo de estados y fotos para twitter

--- a/SWB4/swbsocial/SWBSocialModel/nbproject/project.properties
+++ b/SWB4/swbsocial/SWBSocialModel/nbproject/project.properties
@@ -31,10 +31,14 @@ file.reference.gdata-core-1.0.jar=..\\lib\\gdata-core-1.0.jar
 file.reference.gdata-media-1.0.jar=..\\lib\\gdata-media-1.0.jar
 file.reference.gdata-youtube-2.0.jar=..\\lib\\gdata-youtube-2.0.jar
 file.reference.google-collect-1.0-rc1.jar=..\\lib\\google-collect-1.0-rc1.jar
+file.reference.javaQuery_5.0.jar=../lib/javaQuery 5.0.jar
 file.reference.servlet-api.jar=..\\lib\\servlet-api.jar
+file.reference.twitter4j-core-2.2.5.jar=../lib/twitter4j-core-2.2.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.twitter4j-core-2.2.5.jar}:\
+    ${file.reference.javaQuery_5.0.jar}:\
     ${reference.SWBBase.jar}:\
     ${reference.SWBModel.jar}:\
     ${reference.SWBPlatform.jar}:\
