--- a/SWB4/swb/applets/htmleditor/nbproject/project.properties
+++ b/SWB4/swb/applets/htmleditor/nbproject/project.properties
@@ -32,7 +32,8 @@ includes=**
 jar.compress=true
 javac.classpath=\
     ${file.reference.plugin.jar}:\
-    ${reference.SWBAplCommons.jar}
+    ${reference.SWBAplCommons.jar}:\
+    ${reference.SWBAplFtp.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -69,7 +70,9 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.SWBAplCommons=../WBCommons
+project.SWBAplFtp=../ftp
 reference.SWBAplCommons.jar=${project.SWBAplCommons}/dist/SWBAplCommons.jar
+reference.SWBAplFtp.jar=${project.SWBAplFtp}/dist/SWBAplFtp.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
