Primera versión de la clase Facebook

--- a/SWB4/swbsocial/SWBSocialModel/nbproject/project.properties
+++ b/SWB4/swbsocial/SWBSocialModel/nbproject/project.properties
@@ -32,6 +32,7 @@ file.reference.gdata-media-1.0.jar=..\\lib\\gdata-media-1.0.jar
 file.reference.gdata-youtube-2.0.jar=..\\lib\\gdata-youtube-2.0.jar
 file.reference.google-collect-1.0-rc1.jar=..\\lib\\google-collect-1.0-rc1.jar
 file.reference.javaQuery_5.0.jar=../lib/javaQuery 5.0.jar
+file.reference.json.jar=..\\..\\swb\\lib\\json.jar
 file.reference.servlet-api.jar=..\\lib\\servlet-api.jar
 file.reference.twitter4j-core-2.2.5.jar=../lib/twitter4j-core-2.2.5.jar
 includes=**
@@ -48,7 +49,8 @@ javac.classpath=\
     ${file.reference.gdata-media-1.0.jar}:\
     ${file.reference.gdata-youtube-2.0.jar}:\
     ${file.reference.google-collect-1.0-rc1.jar}:\
-    ${file.reference.servlet-api.jar}
+    ${file.reference.servlet-api.jar}:\
+    ${file.reference.json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
