Primera versión de la autenticación y la publicación en Facebook

--- a/SWB4/swbsocial/nbproject/project.properties
+++ b/SWB4/swbsocial/nbproject/project.properties
@@ -31,6 +31,7 @@ file.reference.gdata-core-1.0.jar=lib\\gdata-core-1.0.jar
 file.reference.gdata-media-1.0.jar=lib\\gdata-media-1.0.jar
 file.reference.gdata-youtube-2.0.jar=lib\\gdata-youtube-2.0.jar
 file.reference.google-collect-1.0-rc1.jar=lib\\google-collect-1.0-rc1.jar
+file.reference.json.jar=..\\swb\\lib\\json.jar
 file.reference.servlet-api.jar=lib\\servlet-api.jar
 includes=**
 j2ee.compile.on.save=true
@@ -50,7 +51,9 @@ javac.classpath=\
     ${file.reference.gdata-media-1.0.jar}:\
     ${file.reference.gdata-youtube-2.0.jar}:\
     ${file.reference.google-collect-1.0-rc1.jar}:\
-    ${file.reference.servlet-api.jar}
+    ${file.reference.servlet-api.jar}:\
+    ${file.reference.json.jar}:\
+    ${reference.swbSocialResources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -84,11 +87,13 @@ project.SWBModel=../swb/SWBModel
 project.SWBPlatform=../swb/SWBPlatform
 project.SWBPortal=../swb/SWBPortal
 project.SWBSocialModel=SWBSocialModel
+project.swbSocialResources=../../../SWB4/swbsocial/swbSocialResources
 reference.SWBBase.jar=${project.SWBBase}/dist/SWBBase.jar
 reference.SWBModel.jar=${project.SWBModel}/dist/SWBModel.jar
 reference.SWBPlatform.jar=${project.SWBPlatform}/dist/SWBPlatform.jar
 reference.SWBPortal.jar=${project.SWBPortal}/dist/SWBPortal.jar
 reference.SWBSocialModel.jar=${project.SWBSocialModel}/dist/SWBSocialModel.jar
+reference.swbSocialResources.jar=${project.swbSocialResources}/dist/swbSocialResources.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
