--- a/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/SWProfileManager.properties
+++ b/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/SWProfileManager.properties
@@ -1,21 +1,47 @@
-lblPhoneNum=Tel\u00e9fono
-lblPhoneLada=Lada
-lblPhoneExt=Extensi\u00f3n
-promptMsgPhoneLada=Ingresa tu clave lada
-promptMsgFaultPhoneLada=Clave Lada incorrecta
-promptMsgPhone=Ingresa tu n\u00famero telef\u00f3nico
-promptMsgFaultPhone=N\u00famero telef\u00f3nico incorrecto
-promptMsgPhoneExt=Ingresa tu extensi\u00f3n telef\u00f3nica
-promptMsgFaultExt=Extensi\u00f3n telef\u00f3nica incorrecta
-promptMsgPhoneExtDr=Ingresa la extensi\u00f3n telef\u00f3nica de tu direcci\u00f3n
-lblEmail=Correo electr\u00f3nico
-promptMsgEmail=Ingresa tu correo electr\u00f3nico
-promptMsgFaultEmail=Correo electr\u00f3nico incorrecto
+titleAboutMe=Acerca de mi
+titleIContact=Contacto de trabajo
+titleITopics=Temas de inter\u00e9s
+lblAboutMe=M\u00e1s acerca de m\u00ed
+lblClose=Cerrar
+lblChangePhoto=Cambiar foto
+lblReset=Restablecer
+lblSave=Guardar
+
+lblPersonality=Mi personalidad
 promptMsgPersonality=Ingresa informaci\u00f3n de tu personalidad
 promptMsgFaultPersonality=La informaci\u00f3n de tu personalidad es requerida
+lblLikes=Mis gustos y pasatiempos
 promptMsgLikes=Ingresa informaci\u00f3n de tus gustos
 promptMsgFaultLikes=La informaci\u00f3n de tus gustos es requerida
+lblIdeas=Mis ideas para mejorar M\u00e9xico
 promptMsgIdeas=Ingresa informaci\u00f3n de tus ideas
 promptMsgFaultIdeas=La informaci\u00f3n de tus ideas es requerida
-promptMsgLocation=Ingresa informaci\u00f3n de tu ubicaci\u00f3n
-promptMsgFaultLocation=La informaci\u00f3n de tu ubicaci\u00f3n es requerida
+
+lblEmail=Correo electr\u00f3nico institucional
+promptMsgEmail=Ingresa tu correo electr\u00f3nico
+promptMsgFaultEmail=Correo electr\u00f3nico incorrecto
+
+lblPhoneLada=Clave Lada
+promptMsgPhoneLada=Clave lada del tel\u00e9fono de trabajo
+promptMsgFaultPhoneLada=Clave Lada incorrecta
+lblPhoneNum=Tel\u00e9fono de trabajo
+promptMsgPhone=N\u00famero telef\u00f3nico de trabajo
+promptMsgFaultPhone=N\u00famero telef\u00f3nico incorrecto
+lblPhoneExt=Extensi\u00f3n
+promptMsgPhoneExt=Extensi\u00f3n telef\u00f3nica de trabajo
+promptMsgFaultExt=Extensi\u00f3n telef\u00f3nica incorrecta
+
+lblLoc=Ubicaci\u00f3n
+lblSeeMap=Ver mapa
+promptMsgLoc=Tu ubicaci\u00f3n dentro de las instalaciones de Infotec, en su defecto tu direcci\u00f3n de trabajo
+promptMsgFaultLoc=La ubicaci\u00f3n o direcci\u00f3n de trabajo es requerida
+
+lblDr=Adscripci\u00f3n
+promptMsgDr=Adscripci\u00f3n o direcci\u00f3n
+promptMsgFaultgDr=La adscripci\u00f3n es un dato requerido
+lblIBoss=Jefe inmediato
+promptMsgIBoss=Jefe inmediato
+promptMsgFaultIBoss=El jefe inmediato es un dato requerido
+lblPhoneExtDr=Extensi\u00f3n de la adscripci\u00f3n
+promptMsgPhoneExtDr=Extensi\u00f3n telef\u00f3nica de tu direcci\u00f3n
+promptMsgFaultPhoneExtDr=La extensi\u00f3n de tu direcci\u00f3n es requerida
