Posteo de imágenes utilizando la red social de Flickr

--- a/SWB4/swbsocial/SWBSocialModel/nbproject/project.properties
+++ b/SWB4/swbsocial/SWBSocialModel/nbproject/project.properties
@@ -26,13 +26,18 @@ dist.jar=${dist.dir}/SWBSocialModel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.3.jar=../lib/commons-codec-1.3.jar
+file.reference.Flickr4Java-1.0.jar=../lib/Flickr4Java-1.0.jar
 file.reference.gdata-client-1.0.jar=..\\lib\\gdata-client-1.0.jar
 file.reference.gdata-core-1.0.jar=..\\lib\\gdata-core-1.0.jar
 file.reference.gdata-media-1.0.jar=..\\lib\\gdata-media-1.0.jar
 file.reference.gdata-youtube-2.0.jar=..\\lib\\gdata-youtube-2.0.jar
 file.reference.google-collect-1.0-rc1.jar=..\\lib\\google-collect-1.0-rc1.jar
+file.reference.httpclient-4.1.3.jar=../lib/httpclient-4.1.3.jar
+file.reference.httpcore-4.1.4.jar=../lib/httpcore-4.1.4.jar
 file.reference.javaQuery_5.0.jar=../lib/javaQuery 5.0.jar
 file.reference.json.jar=..\\..\\swb\\lib\\json.jar
+file.reference.scribe-1.3.0.jar=../lib/scribe-1.3.0.jar
 file.reference.servlet-api.jar=..\\lib\\servlet-api.jar
 file.reference.twitter4j-core-2.2.5.jar=../lib/twitter4j-core-2.2.5.jar
 includes=**
@@ -50,7 +55,12 @@ javac.classpath=\
     ${file.reference.gdata-youtube-2.0.jar}:\
     ${file.reference.google-collect-1.0-rc1.jar}:\
     ${file.reference.servlet-api.jar}:\
-    ${file.reference.json.jar}
+    ${file.reference.json.jar}:\
+    ${file.reference.commons-codec-1.3.jar}:\
+    ${file.reference.Flickr4Java-1.0.jar}:\
+    ${file.reference.httpclient-4.1.3.jar}:\
+    ${file.reference.httpcore-4.1.4.jar}:\
+    ${file.reference.scribe-1.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
