--- a/SWB4/swbsocial/nbproject/project.properties
+++ b/SWB4/swbsocial/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 build.classes.dir=${build.web.dir}/WEB-INF/classes
@@ -26,19 +25,28 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.Flickr4Java-1.0.jar=lib/Flickr4Java-1.0.jar
 file.reference.gdata-client-1.0.jar=lib\\gdata-client-1.0.jar
 file.reference.gdata-core-1.0.jar=lib\\gdata-core-1.0.jar
 file.reference.gdata-media-1.0.jar=lib\\gdata-media-1.0.jar
 file.reference.gdata-youtube-2.0.jar=lib\\gdata-youtube-2.0.jar
 file.reference.google-collect-1.0-rc1.jar=lib\\google-collect-1.0-rc1.jar
+file.reference.httpclient-4.1.3.jar=lib/httpclient-4.1.3.jar
+file.reference.httpcore-4.1.4.jar=lib/httpcore-4.1.4.jar
 file.reference.json.jar=..\\swb\\lib\\json.jar
+file.reference.scribe-1.3.0.jar=lib/scribe-1.3.0.jar
 file.reference.servlet-api.jar=lib\\servlet-api.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-3.6.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-util.jar
-j2ee.server.type=Tomcat70
+j2ee.platform.classpath=${j2ee.server.home}\\modules\\javax.security.jacc.jar:${j2ee.server.home}\\modules\\endorsed\\jaxb-api-osgi.jar:${j2ee.server.home}\\modules\\bean-validator.jar:${j2ee.server.home}\\modules\\javax.jms.jar:${j2ee.server.home}\\modules\\javax.ejb.jar:${j2ee.server.home}\\modules\\jsr311-api.jar:${j2ee.server.home}\\modules\\javax.security.auth.message.jar:${j2ee.server.home}\\modules\\javax.servlet.jsp.jar:${j2ee.server.home}\\modules\\javax.enterprise.deploy.jar:${j2ee.server.home}\\modules\\endorsed\\javax.annotation.jar:${j2ee.server.home}\\modules\\javax.resource.jar:${j2ee.server.home}\\modules\\mail.jar:${j2ee.server.home}\\modules\\javax.transaction.jar:${j2ee.server.home}\\modules\\jsf-impl.jar:${j2ee.server.home}\\modules\\weld-osgi-bundle.jar:${j2ee.server.home}\\modules\\jstl-impl.jar:${j2ee.server.home}\\modules\\javax.management.j2ee.jar:${j2ee.server.home}\\modules\\javax.servlet.jar:${j2ee.server.home}\\modules\\jsf-api.jar:${j2ee.server.home}\\modules\\endorsed\\webservices-api-osgi.jar:${j2ee.server.home}\\modules\\javax.persistence.jar:${j2ee.server.home}\\modules\\javax.servlet.jsp.jstl.jar
+j2ee.platform.embeddableejb.classpath=${j2ee.server.home}\\lib\\embedded\\glassfish-embedded-static-shell.jar
+j2ee.platform.wscompile.classpath=${j2ee.server.home}\\modules\\webservices-osgi.jar
+j2ee.platform.wsgen.classpath=${j2ee.server.home}\\modules\\webservices-osgi.jar:${j2ee.server.home}\\modules\\endorsed\\webservices-api-osgi.jar:${j2ee.server.home}\\modules\\jaxb-osgi.jar:${j2ee.server.home}\\modules\\endorsed\\jaxb-api-osgi.jar:${j2ee.server.home}\\modules\\javax.ejb.jar
+j2ee.platform.wsimport.classpath=${j2ee.server.home}\\modules\\webservices-osgi.jar:${j2ee.server.home}\\modules\\endorsed\\webservices-api-osgi.jar:${j2ee.server.home}\\modules\\jaxb-osgi.jar:${j2ee.server.home}\\modules\\endorsed\\jaxb-api-osgi.jar:${j2ee.server.home}\\modules\\javax.ejb.jar
+j2ee.platform.wsit.classpath=
+j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${reference.SWBSocialModel.jar}:\
@@ -53,7 +61,11 @@ javac.classpath=\
     ${file.reference.google-collect-1.0-rc1.jar}:\
     ${file.reference.servlet-api.jar}:\
     ${file.reference.json.jar}:\
-    ${reference.swbSocialResources.jar}
+    ${reference.swbSocialResources.jar}:\
+    ${file.reference.Flickr4Java-1.0.jar}:\
+    ${file.reference.httpclient-4.1.3.jar}:\
+    ${file.reference.httpcore-4.1.4.jar}:\
+    ${file.reference.scribe-1.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
