--- a/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/SWProfileManager.properties
+++ b/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/SWProfileManager.properties
@@ -38,10 +38,14 @@ promptMsgFaultLoc=La ubicaci\u00f3n o direcci\u00f3n de trabajo es requerida
 
 lblDr=Adscripci\u00f3n
 promptMsgDr=Adscripci\u00f3n o direcci\u00f3n
-promptMsgFaultgDr=La adscripci\u00f3n es un dato requerido
+promptMsgFaultDr=La adscripci\u00f3n es un dato requerido
 lblIBoss=Jefe inmediato
 promptMsgIBoss=Jefe inmediato
 promptMsgFaultIBoss=El jefe inmediato es un dato requerido
 lblPhoneExtDr=Extensi\u00f3n de la adscripci\u00f3n
 promptMsgPhoneExtDr=Extensi\u00f3n telef\u00f3nica de tu direcci\u00f3n
 promptMsgFaultPhoneExtDr=La extensi\u00f3n de tu direcci\u00f3n es requerida
+
+promptMsgErrNoUser=El suaurio no existe con ese correo
+promptMsgErrSurrogacy=Ya existe otra persona con el mismo correo
+promptMsgErrLoopRef=Referencia circular jefe y subordinado
