--- a/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/SWProfileManager.properties
+++ b/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/SWProfileManager.properties
@@ -49,3 +49,9 @@ promptMsgFaultPhoneExtDr=La extensi\u00f3n de tu direcci\u00f3n es requerida
 promptMsgErrNoUser=El suaurio no existe con ese correo
 promptMsgErrSurrogacy=Ya existe otra persona con el mismo correo
 promptMsgErrLoopRef=Referencia circular jefe y subordinado
+
+lblPosition=Cargo o puesto
+promptMsgPosition=Deberes y responsabilidades asignadas
+promptMsgFaultPosition=Cargo o puesto es un dato requerido
+lblPostit=&#191;Qu\u00e9 hago o pienso?
+promptMsgPostit=Comenta u opina sobre tu quehacer
