--- a/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/SWProfileManager.properties
+++ b/swbproys/Eworkplace/src/com/infotec/eworkplace/swb/resources/SWProfileManager.properties
@@ -46,12 +46,12 @@ lblPhoneExtDr=Extensi\u00f3n de la adscripci\u00f3n
 promptMsgPhoneExtDr=Extensi\u00f3n telef\u00f3nica de tu direcci\u00f3n
 promptMsgFaultPhoneExtDr=La extensi\u00f3n de tu direcci\u00f3n es requerida
 
-promptMsgErrNoUser=El suaurio no existe con ese correo
+promptMsgErrNoUser=El usuario no existe con ese correo
 promptMsgErrSurrogacy=Ya existe otra persona con el mismo correo
 promptMsgErrLoopRef=Referencia circular jefe y subordinado
 
 lblPosition=Cargo o puesto
 promptMsgPosition=Deberes y responsabilidades asignadas
 promptMsgFaultPosition=Cargo o puesto es un dato requerido
-lblPostit=&#191;Qu\u00e9 hago o pienso?
+lblPostit=&#191;Qu\u00e9 haces o piensas?
 promptMsgPostit=Comenta u opina sobre tu quehacer
