--- a/SWB4/swbsocial/nbproject/project.properties
+++ b/SWB4/swbsocial/nbproject/project.properties
@@ -41,11 +41,11 @@ includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}\\modules\\javax.security.jacc.jar:${j2ee.server.home}\\modules\\endorsed\\jaxb-api-osgi.jar:${j2ee.server.home}\\modules\\bean-validator.jar:${j2ee.server.home}\\modules\\javax.jms.jar:${j2ee.server.home}\\modules\\javax.ejb.jar:${j2ee.server.home}\\modules\\jsr311-api.jar:${j2ee.server.home}\\modules\\javax.security.auth.message.jar:${j2ee.server.home}\\modules\\javax.servlet.jsp.jar:${j2ee.server.home}\\modules\\javax.enterprise.deploy.jar:${j2ee.server.home}\\modules\\endorsed\\javax.annotation.jar:${j2ee.server.home}\\modules\\javax.resource.jar:${j2ee.server.home}\\modules\\mail.jar:${j2ee.server.home}\\modules\\javax.transaction.jar:${j2ee.server.home}\\modules\\jsf-impl.jar:${j2ee.server.home}\\modules\\weld-osgi-bundle.jar:${j2ee.server.home}\\modules\\jstl-impl.jar:${j2ee.server.home}\\modules\\javax.management.j2ee.jar:${j2ee.server.home}\\modules\\javax.servlet.jar:${j2ee.server.home}\\modules\\jsf-api.jar:${j2ee.server.home}\\modules\\endorsed\\webservices-api-osgi.jar:${j2ee.server.home}\\modules\\javax.persistence.jar:${j2ee.server.home}\\modules\\javax.servlet.jsp.jstl.jar
-j2ee.platform.embeddableejb.classpath=${j2ee.server.home}\\lib\\embedded\\glassfish-embedded-static-shell.jar
-j2ee.platform.wscompile.classpath=${j2ee.server.home}\\modules\\webservices-osgi.jar
-j2ee.platform.wsgen.classpath=${j2ee.server.home}\\modules\\webservices-osgi.jar:${j2ee.server.home}\\modules\\endorsed\\webservices-api-osgi.jar:${j2ee.server.home}\\modules\\jaxb-osgi.jar:${j2ee.server.home}\\modules\\endorsed\\jaxb-api-osgi.jar:${j2ee.server.home}\\modules\\javax.ejb.jar
-j2ee.platform.wsimport.classpath=${j2ee.server.home}\\modules\\webservices-osgi.jar:${j2ee.server.home}\\modules\\endorsed\\webservices-api-osgi.jar:${j2ee.server.home}\\modules\\jaxb-osgi.jar:${j2ee.server.home}\\modules\\endorsed\\jaxb-api-osgi.jar:${j2ee.server.home}\\modules\\javax.ejb.jar
+j2ee.platform.classpath=${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.home}/modules/jsf-impl.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar:${j2ee.server.home}/modules/javax.resource.jar:${j2ee.server.home}/modules/endorsed/javax.annotation.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/javax.management.j2ee.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.security.auth.message.jar:${j2ee.server.home}/modules/javax.jms.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.security.jacc.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/javax.enterprise.deploy.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/jsf-api.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/javax.servlet.jar:${j2ee.server.home}/modules/javax.transaction.jar:${j2ee.server.home}/modules/jersey-core.jar:${j2ee.server.home}/modules/jstl-impl.jar
+j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
+j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
+j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
+j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
@@ -62,8 +62,8 @@ javac.classpath=\
     ${file.reference.google-collect-1.0-rc1.jar}:\
     ${file.reference.servlet-api.jar}:\
     ${file.reference.json.jar}:\
-    ${reference.swbSocialResources.jar}:\
     ${file.reference.Flickr4Java-1.0.jar}:\
+    ${reference.SWBSocialResources.jar}:\
     ${file.reference.httpclient-4.1.3.jar}:\
     ${file.reference.httpcore-4.1.4.jar}:\
     ${file.reference.scribe-1.3.0.jar}
@@ -101,12 +101,13 @@ project.SWBPlatform=../swb/SWBPlatform
 project.SWBPortal=../swb/SWBPortal
 project.SWBSocialModel=SWBSocialModel
 project.swbSocialResources=../../../SWB4/swbsocial/swbSocialResources
+project.SWBSocialResources=swbSocialResources
 reference.SWBBase.jar=${project.SWBBase}/dist/SWBBase.jar
 reference.SWBModel.jar=${project.SWBModel}/dist/SWBModel.jar
 reference.SWBPlatform.jar=${project.SWBPlatform}/dist/SWBPlatform.jar
 reference.SWBPortal.jar=${project.SWBPortal}/dist/SWBPortal.jar
 reference.SWBSocialModel.jar=${project.SWBSocialModel}/dist/SWBSocialModel.jar
-reference.swbSocialResources.jar=${project.swbSocialResources}/dist/swbSocialResources.jar
+reference.SWBSocialResources.jar=${project.SWBSocialResources}/dist/SWBSocialResources.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
