--- a/swbproys/Eworkplace/nbproject/project.properties
+++ b/swbproys/Eworkplace/nbproject/project.properties
@@ -59,7 +59,7 @@ javac.test.classpath=\
     ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=
+javadoc.additionalparam=-header "CVI - Curriculum Vitae INFOTEC" -windowtitle "CVI - Curriculum Vitae INFOTEC"
 javadoc.author=false
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
