--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/admin/resources/SWBALogs.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/admin/resources/SWBALogs.properties
@@ -1,6 +1,6 @@
 # Sample ResourceBundle properties file
 
-LogConfig=Configuraci\u00F3n de la bit\u00E1cora
+LogConfig=Configuraci\u00f3n de la bit\u00e1cora
 
 LogType=Tipo de log
 
@@ -26,47 +26,47 @@ selectRule=Regla
 
 selectSubType=Subtipo
 
-selectTM=Mapa de t\u00F3picos
+selectTM=Mapa de t\u00f3picos
 
-selectTP=T\u00F3pico
+selectTP=T\u00f3pico
 
 selectTpl=Plantilla
 
 selectGrpTpl=Grupo de plantilla
 
-selectRepCols=Selecciona las columnas que deseas para la bit\u00E1cora.
+selectRepCols=Selecciona las columnas que deseas para la bit\u00e1cora.
 
-msgAction=Acci\u00F3n
+msgAction=Acci\u00f3n
 
-msgDesc=Descripci\u00F3n
+msgDesc=Descripci\u00f3n
 
 msgDate=Fecha
 
 msgPerform=Realizado por
 
-msgPagesOptions=Opciones de paginaci\u00F3n
+msgPagesOptions=Opciones de paginaci\u00f3n
 
-pageRows=Renglones por p\u00E1gina
+pageRows=Renglones por p\u00e1gina
 
-showPageNumbers=Mostrar n\u00FAmero de p\u00E1ginas
+showPageNumbers=Mostrar n\u00famero de p\u00e1ginas
 
-pageNumbersToShow=N\u00FAmero de p\u00E1ginas a mostrar
+pageNumbersToShow=N\u00famero de p\u00e1ginas a mostrar
 
-nextPageText=Texto para p\u00E1gina siguiente
+nextPageText=Texto para p\u00e1gina siguiente
 
-previousPageText=Texto para p\u00E1gina anterior
+previousPageText=Texto para p\u00e1gina anterior
 
 btnSend=Enviar
 
-btnViewLog=Ver bit\u00E1cora
+btnViewLog=Ver bit\u00e1cora
 
 defaultValueNext=Siguiente
 
 defaultValuePrevious=Anterior
 
-thAction=Acci\u00F3n
+thAction=Acci\u00f3n
 
-thDescription=Descripci\u00F3n
+thDescription=Descripci\u00f3n
 
 thPerformedBy=Realizado por
 
@@ -74,18 +74,22 @@ thDate=Fecha
 
 linkAdminView=Admin
 
-selectFilter=Filtro de administraci\u00F3n
+selectFilter=Filtro de administraci\u00f3n
 
 selectUser=Usuario
 
 selectResourceType=Tipo de recurso
 
-selectCamp=Campa\u00F1a
+selectCamp=Campa\u00f1a
 
 selectIpFilter=Filtro IP
 
-selectPFlow=Flujo de publicaci\u00F3n
+selectPFlow=Flujo de publicaci\u00f3n
 msg_reload=Recargar
 msg_export=Exportar
 msg_allLog=Mostrar todo el Log
 msg_modelLog=Log del Modelo
+thElementID=Elemento
+thClass=Tipo
+msgObj=Id Elemento
+msgClass=Tipo del elemento
