--- a/SWB4/swb/applets/ftp/src/applets/ftp/ftp.properties
+++ b/SWB4/swb/applets/ftp/src/applets/ftp/ftp.properties
@@ -75,3 +75,5 @@ menu_add_folder=Agregar directorio
 
 add_dir=Agregar directorio
 downloaddir=Descargar directorio
+close=Cerrar
+preview=Vista Preeliminar
