--- a/SWB4/swbsocial/SWBSocialModel/nbproject/project.properties
+++ b/SWB4/swbsocial/SWBSocialModel/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.json.jar=..\\..\\swb\\lib\\json.jar
 file.reference.scribe-1.3.0.jar=../lib/scribe-1.3.0.jar
 file.reference.servlet-api.jar=..\\lib\\servlet-api.jar
 file.reference.twitter4j-core-2.2.5.jar=../lib/twitter4j-core-2.2.5.jar
+file.reference.twitter4j-stream-2.2.5.jar=../lib/twitter4j-stream-2.2.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -60,7 +61,8 @@ javac.classpath=\
     ${file.reference.Flickr4Java-1.0.jar}:\
     ${file.reference.httpclient-4.1.3.jar}:\
     ${file.reference.httpcore-4.1.4.jar}:\
-    ${file.reference.scribe-1.3.0.jar}
+    ${file.reference.scribe-1.3.0.jar}:\
+    ${file.reference.twitter4j-stream-2.2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
