--- a/SWB4/swb/SWBPortal/nbproject/project.properties
+++ b/SWB4/swb/SWBPortal/nbproject/project.properties
@@ -59,7 +59,7 @@ file.reference.poi-scratchpad-3.5-FINAL-20090928.jar=..\\lib\\poi-scratchpad-3.5
 file.reference.portlet-api-2.0.jar=../lib/portlet-api-2.0.jar
 file.reference.servlet-api.jar=../lib/servlet-api.jar
 file.reference.servlet.jar=../lib/servlet.jar
-file.reference.twitter4j-2.0.9.jar=../lib/twitter4j-2.0.9.jar
+file.reference.twitter4j-core-2.2.5.jar=..\\lib\\twitter4j-core-2.2.5.jar
 includes=**
 jar.compress=true
 javac.classpath=\
@@ -92,7 +92,6 @@ javac.classpath=\
     ${file.reference.facebook-java-api-3.0.0-SNAPSHOT.jar}:\
     ${file.reference.facebook-java-api-schema-3.0.0-SNAPSHOT.jar}:\
     ${file.reference.groovy-all-1.6.3.jar}:\
-    ${file.reference.twitter4j-2.0.9.jar}:\
     ${file.reference.poi-scratchpad-3.5-FINAL-20090928.jar}:\
     ${file.reference.fckeditor-java-core-2.4.1.jar}:\
     ${reference.SWBTripleStore.jar}:\
@@ -101,7 +100,8 @@ javac.classpath=\
     ${file.reference.gdata-client-1.0.jar}:\
     ${file.reference.gdata-core-1.0.jar}:\
     ${file.reference.gdata-media-1.0.jar}:\
-    ${file.reference.gdata-youtube-2.0.jar}
+    ${file.reference.gdata-youtube-2.0.jar}:\
+    ${file.reference.twitter4j-core-2.2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
