--- a/SWB4/swb/src/java/db.properties
+++ b/SWB4/swb/src/java/db.properties
@@ -42,14 +42,15 @@ jndi_pool=false
 #xx.idle_time= Tiempo m\u00e1ximo (segundos) de permanec\u00eda de la conexi\u00f3n inactiva en el pool, si es = 0 no expira
 
 #drivers=org.gjt.mm.mysql.Driver
-
-#swb.url=jdbc:mysql://localhost:3306/swb
+#drivers=com.mysql.jdbc.Driver
+#jdbc:mysql://address=(protocol=tcp)(host=localhost)(port=3306)(user=test)/db
+#swb.url=jdbc:mysql://localhost:3306/swbe
 #swb.maxconn=80
 #swb.user=root
 #swb.password=
 #swb.idle_time=900
 
-drivers=org.hsqldb.jdbcDriver
+drivers=org.hsqldb.jdbcDriver org.gjt.mm.mysql.Driver
 
 #swb.url=jdbc:hsqldb:mem:swbmemdb
 swb.url=jdbc:hsqldb:file:{apppath}/WEB-INF/db/hsqldb/swb
@@ -57,6 +58,13 @@ swb.maxconn=80
 swb.user=SA
 swb.password=
 swb.idle_time=900
+
+#adress.url=jdbc:mysql://localhost:3306/catalogos
+#adress.maxconn=200
+#adress.user=root
+#adress.password=
+#adress.idle_time=900
+
 
 #drivers=com.pointbase.jdbc.jdbcUniversalDriver
 
