load balancing in IPV6

--- a/SWB4/swb/src/java/web.properties
+++ b/SWB4/swb/src/java/web.properties
@@ -101,9 +101,9 @@ af/adminEmail=webbuilder@infotec.com.mx
 #Periodo de tiempo en segundos entre cada sincronizaci\u00f3n con db
 swb/syncTime=10
 
-#IP local para el envio de mensajes de sincronizacion
+#IP local para el envio de mensajes de sincronizacion en IPV6 usar [xxxx:xxxx::x]:1500
 swb/localMessageAddress=localhost:1500
-#IP de la maquina configurada como servidor para el envio de mensajes de sincronizacion
+#IP de la maquina configurada como servidor para el envio de mensajes de sincronizacion en IPV6 usar [xxxx:xxxx::x]:1500
 swb/serverMessageAddress=localhost:1500
 
 #Parametros Depreciados
