--- a/SWB4/swbsocial/SWBSocialModel/nbproject/project.properties
+++ b/SWB4/swbsocial/SWBSocialModel/nbproject/project.properties
@@ -37,6 +37,9 @@ file.reference.httpclient-4.1.3.jar=../lib/httpclient-4.1.3.jar
 file.reference.httpcore-4.1.4.jar=../lib/httpcore-4.1.4.jar
 file.reference.javaQuery_5.0.jar=../lib/javaQuery 5.0.jar
 file.reference.json.jar=..\\..\\swb\\lib\\json.jar
+file.reference.lucene-analyzers-3.6.0.jar=..\\lib\\lucene-analyzers-3.6.0.jar
+file.reference.lucene-core-3.6.0.jar=..\\lib\\lucene-core-3.6.0.jar
+file.reference.lucene-snowball-2.4.1.jar=..\\lib\\lucene-snowball-2.4.1.jar
 file.reference.scribe-1.3.0.jar=../lib/scribe-1.3.0.jar
 file.reference.servlet-api.jar=..\\lib\\servlet-api.jar
 file.reference.twitter4j-core-2.2.5.jar=../lib/twitter4j-core-2.2.5.jar
@@ -62,7 +65,10 @@ javac.classpath=\
     ${file.reference.httpclient-4.1.3.jar}:\
     ${file.reference.httpcore-4.1.4.jar}:\
     ${file.reference.scribe-1.3.0.jar}:\
-    ${file.reference.twitter4j-stream-2.2.5.jar}
+    ${file.reference.twitter4j-stream-2.2.5.jar}:\
+    ${file.reference.lucene-snowball-2.4.1.jar}:\
+    ${file.reference.lucene-core-3.6.0.jar}:\
+    ${file.reference.lucene-analyzers-3.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
