--- a/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/LiteFileRepository.properties
+++ b/SWB4/swb/SWBPortal/src/org/semanticwb/portal/resources/LiteFileRepository.properties
@@ -324,3 +324,4 @@ msgBTNUpdate=Actualizar
 mustBeSigned=Debes de estar firmado para utilizar el repositorio de documentos.
 btnBack=Regresar
 msgNextVersion=Siguiente versi\u00f3n
+msgFolderSupport=Permitir creacion de carpetas
