--- a/swbproys/Conorg/nbproject/project.properties
+++ b/swbproys/Conorg/nbproject/project.properties
@@ -26,13 +26,19 @@ dist.jar=${dist.dir}/Conorg.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jena-2.6.3.jar=../../SWB4/swb/lib/jena-2.6.3.jar
+file.reference.json.jar=../../SWB4/swb/lib/json.jar
+file.reference.servlet-api.jar=../../SWB4/swb/lib/servlet-api.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.SWBBase.jar}:\
     ${reference.SWBModel.jar}:\
     ${reference.SWBPlatform.jar}:\
-    ${reference.SWBPortal.jar}
+    ${reference.SWBPortal.jar}:\
+    ${file.reference.jena-2.6.3.jar}:\
+    ${file.reference.json.jar}:\
+    ${file.reference.servlet-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,6 +64,7 @@ javadoc.version=false
 javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
+no.dependencies=true
 platform.active=default_platform
 project.SWBBase=../../SWB4/swb/SWBBase
 project.SWBModel=../../SWB4/swb/SWBModel
