--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
@@ -46,3 +46,4 @@ lbl_relatesApps=Aplicaciones relacionadas
 lbl_NOrelatesApps=No se encontraron aplicaciones relacionadas
 lbl_lastDownload=\u00daltima descarga
 lbl_lastView=\u00daltima visita
+lbl_date=Fecha
