--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DeveloperRegisterResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DeveloperRegisterResource.properties
@@ -58,7 +58,9 @@ msgErrAct=No se pudo activar la cuenta
 msgSubject=Correo de confirmaci\u00f3n
 msgActResource=Se actualiz\u00f3 exitosamente el recurso
 lblData=Datos
-lblInsToActivate=Correo con intrucciones para activaci\u00f3n
+lblInsEmailActivate=Correo con intrucciones para activaci\u00f3n
+lblInsToActivate=Pagina de instricciones para activaci\u00f3n
+lblInsToLogin=Pagina de intrucciones para ingreso
 lblFullName=Nombre completo
 lblLink=Liga
 lblDate=Fecha
