--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
@@ -47,3 +47,5 @@ lbl_NOrelatesApps=No se encontraron aplicaciones relacionadas
 lbl_lastDownload=\u00daltima descarga
 lbl_lastView=\u00daltima visita
 lbl_date=Fecha
+lbl_numcomments=N\u00famero de Comentarios
+lbl_numapps=N\u00famero de aplicaciones
