--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
@@ -49,3 +49,4 @@ lbl_lastView=\u00daltima visita
 lbl_date=Fecha
 lbl_numcomments=N\u00famero de Comentarios
 lbl_numapps=N\u00famero de aplicaciones
+lbl_val1=No recomendable
