Se agregaron etiquetas para internacionalización

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource.properties
@@ -51,3 +51,4 @@ lbl_numcomments=N\u00famero de Comentarios
 lbl_numapps=N\u00famero de aplicaciones
 lbl_val1=No recomendable
 lbl_notDSfound=No se encontraron Datasets
+lbl_all=Todos
