--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSHomeResource.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSHomeResource.properties
@@ -9,10 +9,10 @@ lbl_size=Tama\u00f1o
 lbl_topic=Tema
 lbl_notDSfound=No se encontraron Dataset
 lbl_orderby=Ordenar
-lbl_byrecent=M\u00e1s reciente
-lbl_byvisited=M\u00e1s visitado
-lbl_bydownload=M\u00e1s descargado
-lbl_byvaluated=Mejor calificado
+lbl_byrecent=Recientes
+lbl_byvisited=Consultados
+lbl_bydownload=Descargados
+lbl_byvaluated=Calificados
 lbl_data=Datos
 lbl_catalogdata=Ver Cat\u00e1logo de Datos
 lbl_about=sobre
